--- a/Woong_Android/app/src/main/res/layout/activity_consumer_join1.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_consumer_join1.xml
@@ -6,11 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".join.consumer.Join1Activity"
     android:orientation="vertical"
-    android:background="@drawable/login_background">
+    android:background="@drawable/login_bg_bg">
     
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="184dp">
+        android:layout_height="0dp"
+        android:layout_weight="1">
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -33,91 +34,104 @@
         </LinearLayout>
     </RelativeLayout>
     <LinearLayout
-        android:paddingTop="57dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2"
         android:layout_gravity="center_horizontal"
         android:orientation="vertical"
         android:background="#FFFFFF">
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1.5"
             android:layout_gravity="center_horizontal">
-            <TextView
-                android:fontFamily="@font/nanum_bold"
-                android:textSize="15dp"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="생년월일"
-                android:layout_marginBottom="10dp"/>
-            <LinearLayout
-                android:layout_width="223dp"
-                android:layout_height="30dp"
-                android:orientation="horizontal">
-                <Spinner
-                    android:id="@+id/spinner_year_consumer"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1.5"/>
+                android:orientation="vertical"
+                android:layout_centerInParent="true">
                 <TextView
+                    android:fontFamily="@font/nanum_bold"
+                    android:textSize="15dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="년"/>
-                <Spinner
-                    android:id="@+id/spinner_month_consumer"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="월"/>
-                <Spinner
-                    android:id="@+id/spinner_day_consumer"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="일"/>
+                    android:textColor="#707070"
+                    android:text="생년월일"
+                    android:layout_marginBottom="10dp"/>
+                <LinearLayout
+                    android:layout_width="223dp"
+                    android:layout_height="30dp"
+                    android:orientation="horizontal">
+                    <Spinner
+                        android:id="@+id/spinner_year_consumer"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1.5"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="년"/>
+                    <Spinner
+                        android:id="@+id/spinner_month_consumer"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="월"/>
+                    <Spinner
+                        android:id="@+id/spinner_day_consumer"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="일"/>
+                </LinearLayout>
+                <View
+                    android:layout_width="223dp"
+                    android:layout_height="0.5dp"
+                    android:background="#707070"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="15dp">
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="이름"/>
+                    <EditText
+                        android:layout_width="0dp"
+                        android:layout_weight="3"
+                        android:layout_height="wrap_content"
+                        android:background="#FFFFFF"/>
+                </LinearLayout>
+                <View
+                    android:layout_width="223dp"
+                    android:layout_height="0.5dp"
+                    android:background="#707070"/>
             </LinearLayout>
-            <View
-                android:layout_width="223dp"
-                android:layout_height="2dp"
-                android:background="@android:color/darker_gray"/>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:orientation="horizontal"
-                android:layout_marginTop="15dp">
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="이름"/>
-                <EditText
-                    android:layout_width="0dp"
-                    android:layout_weight="3"
-                    android:layout_height="wrap_content"
-                    android:background="#FFFFFF"/>
-            </LinearLayout>
-            <View
-                android:layout_width="223dp"
-                android:layout_height="2dp"
-                android:background="@android:color/darker_gray"/>
-        </LinearLayout>
-        <Button
-            android:id="@+id/btn_next_consumer_join1"
-            android:layout_width="188dp"
-            android:layout_height="48dp"
-            android:fontFamily="@font/nanum_bold"
-            android:textSize="16dp"
-            android:text="다음"
-            android:layout_marginTop="100dp"
-            android:layout_gravity="center_horizontal"
-            android:textColor="@android:color/white"
-            android:background="@drawable/green_round_button"/>
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+            <Button
+                android:id="@+id/btn_next_consumer_join1"
+                android:layout_centerInParent="true"
+                android:layout_width="188dp"
+                android:layout_height="48dp"
+                android:fontFamily="@font/nanum_bold"
+                android:textSize="16dp"
+                android:text="다음"
+                android:layout_marginTop="100dp"
+                android:layout_gravity="center_horizontal"
+                android:textColor="#FFFFFF"
+                android:background="@drawable/green_round_button"/>
+        </RelativeLayout>
     </LinearLayout>
 </LinearLayout>
