--- a/Woong_Android/app/src/main/res/layout/activity_location_search.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_location_search.xml
@@ -1,88 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:orientation="vertical"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context=".map.location_change.LocationSearchChangeActivity"
-android:background="#ffffff">
-<RelativeLayout
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
-    android:background="#FFFFFF">
-    <ImageButton
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:background="@color/colorPrimaryDark"
-        android:layout_marginLeft="10dp"
-        android:layout_centerVertical="true"/>
-    <TextView
-        android:id="@+id/tv_location_main"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#000000"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:text="내 현재 위치"/>
-</RelativeLayout>
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="50dp"
-    android:background="#FFFFFF">
-    <ImageView
-        android:id="@+id/iv_searchback_main"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:layout_marginHorizontal="10dp"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:background="#EDEDED"/>
-
+    android:layout_height="match_parent"
+    tools:context=".map.location_change.LocationSearchChangeActivity"
+    android:background="#ffffff">
     <RelativeLayout
-
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="25dp">
-        <ImageView
-
+        android:layout_height="46dp"
+        android:background="#FFFFFF">
+        <ImageButton
             android:layout_width="20dp"
             android:layout_height="20dp"
+            android:layout_marginRight="18dp"
+            android:src="@drawable/setting_location_2_big_x"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"/>
+
+        <TextView
+            android:id="@+id/tv_location_main"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/nanum_extrabold"
+            android:textSize="17dp"
+            android:textColor="#1C2320"
             android:layout_centerVertical="true"
-            android:layout_marginRight="10dp"
-            android:background="@color/colorPrimaryDark"/>
+            android:layout_centerHorizontal="true"
+            android:text="위치 설정"/>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/iv_searchback_main"
+        android:layout_centerHorizontal="true"
+        android:layout_width="325dp"
+        android:layout_height="35dp"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/setting_location_2_search_bar">
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/setting_location_1_search"
+            android:layout_marginTop="12dp"
+            android:layout_marginLeft="20dp"
+            android:layout_centerVertical="true"/>
         <EditText
             android:id="@+id/et_search_main"
-            android:layout_centerInParent="true"
-            android:gravity="center"
-
-            android:layout_width="300dp"
-            android:layout_height="30dp"
-            android:textColor="#9B9B9B"
-            android:textColorHint="#bcbcbc"
-            android:textSize="11sp"
-            android:inputType="text"
-            android:hint="지번,도로명,건물명으로 검색"
-            android:imeOptions="actionSearch"
-            android:background="@null"/>
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:fontFamily="@font/nanum_bold"
+            android:textSize="16dp"
+            android:hint="위치를 검색해주세요"
+            android:textColor="#1C2320"
+            android:background="@null"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            />
     </RelativeLayout>
 
 
 
-</RelativeLayout>
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:padding="10dp"
-            android:textColor="@color/colorPrimaryDark"
+            android:fontFamily="@font/nanum_bold"
+            android:textSize="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#237A59"
+            android:layout_marginTop="42dp"
+            android:layout_marginLeft="25dp"
             android:text="주소 검색 결과"/>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_result_consumer_location_search"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+            android:layout_height="match_parent"
+            android:layout_marginTop="9dp"
+            android:layout_marginLeft="25dp"></android.support.v7.widget.RecyclerView>
 
 
 </LinearLayout>
