--- a/Woong_Android/app/src/main/res/layout/fragment_locationsearch_result.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_locationsearch_result.xml
@@ -5,9 +5,11 @@
     android:orientation="vertical">
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:padding="10dp"
-        android:textColor="@color/colorPrimaryDark"
+        android:layout_height="wrap_content"
+        android:textColor="#707070"
+        android:layout_marginBottom="12dp"
+        android:textSize="15dp"
+        android:fontFamily="@font/nanum_bold"
         android:text="주소 검색 결과"/>
 
     <android.support.v7.widget.RecyclerView
