--- a/Woong_Android/app/src/main/res/layout/item_address_join_search.xml
+++ b/Woong_Android/app/src/main/res/layout/item_address_join_search.xml
@@ -1,33 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="60dp"
-    android:padding="10dp">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="#FFFFFF"
+    android:paddingVertical="13dp">
     <ImageView
         android:id="@+id/iv_pin_location"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:background="@color/colorPrimaryDark"/>
+        android:layout_width="12dp"
+        android:layout_height="16dp"
+        android:src="@drawable/setting_location_2_location_icon"/>
     <TextView
+        android:fontFamily="@font/nanum_regular"
+        android:textSize="16dp"
+        android:textColor="#1C2320"
         android:id="@+id/item_address_join_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/iv_pin_location"
         android:layout_marginLeft="10dp"
-        android:text="ㅋ"/>
+        android:text="마포구 상수동 72-1"/>
     <TextView
         android:id="@+id/tv_road_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/item_address_join_location"
         android:layout_below="@+id/item_address_join_location"
-        android:text="[도로명] "/>
+        android:textSize="13dp"
+        android:fontFamily="@font/nanum_regular"
+        android:textColor="#ADADAD"
+        android:layout_marginTop="7dp"
+        android:text="[도로명] " />
     <TextView
         android:id="@+id/item_road_join_location"
         android:layout_toRightOf="@+id/tv_road_name"
         android:layout_alignTop="@+id/tv_road_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="12sp"
-        android:text="ㅋㄷㅋㄷ" />
+        android:textSize="13dp"
+        android:fontFamily="@font/nanum_regular"
+        android:textColor="#ADADAD"
+        android:text="와우산로 94" />
 </RelativeLayout>
