--- a/Woong_Android/app/src/main/res/layout/item_sellermarket_review.xml
+++ b/Woong_Android/app/src/main/res/layout/item_sellermarket_review.xml
@@ -1,21 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    android:gravity="center_vertical"
+    android:paddingBottom="24dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="50dp">
+    android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/name_review_sellermarket"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="#1C2320"
+            android:layout_marginLeft="20dp"
+            android:fontFamily="@font/nanum_bold"
+            android:textSize="13dp"
             android:text="최윤정"/>
         <TextView
             android:id="@+id/review_sellermarket"
-            android:layout_marginLeft="30dp"
+            android:layout_marginLeft="21dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="fsdfsdfsdsdfsfd"/>
-
-
+            android:fontFamily="@font/nanum_regular"
+            android:textSize="13dp"
+            android:textColor="#707070"
+            android:text="넘넘 맛있어용~!"/>
 </LinearLayout>
