<중분류-마켓의 물품상세> 연결 완료

--- a/Woong_Android/app/src/main/res/layout/fragment_sellermarket_productdetail.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_sellermarket_productdetail.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF">
-    <ScrollView
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <LinearLayout
@@ -164,7 +164,7 @@
                     android:text="1600-6725"/>
             </LinearLayout>
         </LinearLayout>
-    </ScrollView>
+    </android.support.v4.widget.NestedScrollView>
     <!--밑에 고정 버튼-->
     <LinearLayout
         android:layout_width="match_parent"
