<물품목록-물품상세> 임시 데이터로 넘기기 확인. 안 쓰는 레이아웃 삭제

--- a/Woong_Android/app/src/main/res/layout/fragment_sellermarket_product.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_sellermarket_product.xml
@@ -27,8 +27,9 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_sellermarket_product"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
+        android:layout_gravity="center"
+        android:foregroundGravity="center"
+        android:textAlignment="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
 
