--- a/Woong_Android/app/src/main/res/layout/item_sellermarket_product.xml
+++ b/Woong_Android/app/src/main/res/layout/item_sellermarket_product.xml
@@ -5,6 +5,7 @@
     android:layout_width="160dp"
     android:layout_height="220dp"
     android:layout_marginBottom="15dp"
+    android:elevation="3dp"
     android:orientation="vertical">
     <RelativeLayout
         android:layout_width="match_parent"
