--- a/Woong_Android/app/src/main/res/layout/fragment_product_home.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_product_home.xml
@@ -13,7 +13,7 @@
             android:id="@+id/tv_submenu_product"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#000000"
+            android:textColor="#ffffff"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
             android:text="감자"/>
@@ -21,56 +21,61 @@
             android:id="@+id/btn_search_product"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:background="@color/colorAccent"
+            android:background="@drawable/comsumer_allergy_select_ed_eggs"
             android:layout_marginRight="10dp"
             android:layout_toLeftOf="@+id/btn_cart_product"
             android:layout_centerVertical="true"/>
+        <ImageView
+            android:id="@+id/iv_searchwide_product"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/gray_round_button"
+            android:layout_marginRight="10dp"
+            android:visibility="invisible"
+            android:layout_toLeftOf="@id/btn_cart_product"
+            android:layout_centerVertical="true"/>
+        <ImageView
+            android:id="@+id/iv_searchico_product"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:background="@drawable/comsumer_allergy_select_ed_peach"
+            android:layout_alignStart="@+id/iv_searchwide_product"
+            android:layout_centerVertical="true"
+            android:visibility="gone"
+            android:layout_marginLeft="20dp"/>
         <ImageButton
             android:id="@+id/btn_cart_product"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:background="@color/colorAccent"
+            android:background="@drawable/comsumer_allergy_select_ed_tomato"
             android:layout_marginRight="10dp"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"/>
-        <ImageView
-            android:id="@+id/iv_searchback_product"
-            android:layout_width="285dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="25dp"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"
+        <TextView
+            android:id="@+id/tv_cancel_product"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#ffffff"
+            android:text="취소"
             android:visibility="gone"
-            android:background="@color/colorPastel"/>
+            android:layout_marginRight="15dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"/>
         <EditText
             android:id="@+id/et_search_main"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="250dp"
+            android:layout_height="30dp"
+            android:imeOptions="actionSearch"
+            android:inputType="text"
+            android:textAlignment="center"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
+            android:background="#00000000"
             android:textColor="#000000"
-            android:textSize="12sp"
             android:visibility="gone"
-            android:text="감자"/>
-        <ImageView
-            android:id="@+id/iv_searchico_main"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_alignStart="@id/iv_searchback_product"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
-            android:visibility="gone"
-            android:background="@color/colorAccent"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignEnd="@id/iv_searchback_product"
-            android:layout_alignBottom="@id/iv_searchback_product"
-            android:layout_marginRight="15dp"
-            android:layout_marginBottom="5dp"
-            android:textSize="12sp"
-            android:visibility="gone"
-            android:text="(100건)"/>
+            android:maxLines="1"
+            android:textSize="17sp"
+            android:hint="검색해주세요."/>
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
