--- a/Woong_Android/app/src/main/res/layout/activity_change_location_search.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_change_location_search.xml
@@ -44,6 +44,8 @@
             android:layout_marginLeft="20dp"
             android:layout_centerVertical="true"/>
         <EditText
+            android:imeOptions="actionSearch"
+            android:inputType="text"
             android:id="@+id/et_change_search_main"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
