충돌 해결. 스플래시 이미지 변경 및 채우기. 앱 이름 변경.

--- a/Woong_Android/app/src/main/res/layout/activity_splash.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_splash.xml
@@ -8,6 +8,7 @@
     tools:context=".splash.SplashActivity">
     <ImageView
         android:id="@+id/gif_image"
+        android:scaleType="fitXY"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
