--- a/Woong_Android/app/src/main/res/layout/fragment_sellermarket_intro.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_sellermarket_intro.xml
@@ -74,6 +74,7 @@
             android:layout_height="200dp"
             android:layout_marginTop="30dp"
             android:layout_centerHorizontal="true"
+            android:scaleType="centerCrop"
             android:src="@mipmap/ic_launcher_foreground"
             android:background="@color/colorPrimaryDark"/>
     </RelativeLayout>
