--- a/Woong_Android/app/src/main/res/layout/item_bookmark_mymarket.xml
+++ b/Woong_Android/app/src/main/res/layout/item_bookmark_mymarket.xml
@@ -15,6 +15,7 @@
             android:layout_width="50dp"
             android:layout_height="40dp"
             android:layout_marginLeft="15dp"
+            android:scaleType="centerCrop"
             android:background="@android:color/darker_gray" />
 
         <LinearLayout
