--- a/Woong_Android/app/src/main/res/layout/item_cart_myproduct.xml
+++ b/Woong_Android/app/src/main/res/layout/item_cart_myproduct.xml
@@ -27,6 +27,7 @@
                 android:id="@+id/productimg_cart_myproduct"
                 android:layout_width="120dp"
                 android:layout_height="100dp"
+                android:scaleType="centerCrop"
                 android:background="#ececec"/>
             <RelativeLayout
                 android:layout_alignParentRight="true"
