--- a/Woong_Android/app/src/main/res/layout/item_market_mymarket.xml
+++ b/Woong_Android/app/src/main/res/layout/item_market_mymarket.xml
@@ -11,6 +11,7 @@
             android:id="@+id/iv_market_market"
             android:layout_width="130dp"
             android:layout_height="100dp"
+            android:scaleType="centerCrop"
             android:background="@color/colorPastel"/>
         <RelativeLayout
             android:layout_width="wrap_content"
