--- a/Woong_Android/app/src/main/res/layout/item_payment_myproduct.xml
+++ b/Woong_Android/app/src/main/res/layout/item_payment_myproduct.xml
@@ -13,6 +13,7 @@
         <ImageView
             android:layout_width="80dp"
             android:layout_height="70dp"
+            android:scaleType="centerCrop"
             android:background="#bcbcbc"/>
         <RelativeLayout
             android:layout_marginLeft="10dp"
