--- a/Woong_Android/app/src/main/res/layout/fragment_product_home.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_product_home.xml
@@ -62,7 +62,7 @@
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"/>
         <EditText
-            android:id="@+id/et_search_main"
+            android:id="@+id/et_search_product"
             android:layout_width="250dp"
             android:layout_height="30dp"
             android:imeOptions="actionSearch"
