--- a/Woong_Android/app/src/main/res/layout/activity_marketer_join2.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_marketer_join2.xml
@@ -62,6 +62,7 @@
                     android:layout_height="wrap_content"
                     android:text="비밀번호"/>
                 <EditText
+                    android:textColor="#000000"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:background="@null"
